se agergo link entre ejercicios

--- a/Ejercicios-HTML/ej_noticia.html
+++ b/Ejercicios-HTML/ej_noticia.html
@@ -8,13 +8,14 @@
 <!--Agregar la etiqueta semántica para la cabecera. La cabecera debe contener un titulo-->
 <!--Separe la noticia en parrafos-->
     <header>
-        <img src="imagenes/imagen-mundo.jpg">
-        
-        
+        <img src="imagenes/imagen-mundo.jpg" width="600" height="544">     
         <h1>
               Diario On-line
         </h1>
     </header>
+    <nav>
+        <a href="ej_listas.html">receta_alfajores_de_maicena</a>
+    </nav>
 
     <section>
         <h3
