se realizarn ejercicios de accesibilidad y multimedia

--- a/Ejercicios-HTML/ej_tablas.html
+++ b/Ejercicios-HTML/ej_tablas.html
@@ -17,6 +17,7 @@
 <body>
 <!--este es mi comentarioo-->
     <table>
+        <caption>Congresos y eventos</caption>
         <thead>
         <th>Siglas</th>
         <th>Congreso o Evento</th>
