--- a/Ejercicios-HTML/ej_formulario.html
+++ b/Ejercicios-HTML/ej_formulario.html
@@ -20,45 +20,45 @@
 <h3>Suscribase a Nuestro Portal de Noticias! Crear una cuenta es rápido!</h3>
 <form id="formulario_suscripcion">
     <p>
-        Nombre: <input type="text" name="nombre" placeholder="nombre">
+        <label for="nombre">Nombre</label> <input type="text" name="nombre" placeholder="Nombre" id="nombre">
     </p>
     <p>
-        Apellido: <input type="text" name="apellido" placeholder="apellido">
+        <label for="apellido">Apellido</label> <input type="text" name="apellido" placeholder="Apellido" id="apellido">
     </p>
     <p>
-        Sexo: Masculino <input type="radio" name="sexo" value="Masculino">
-        Femenino <input type="radio" name="sexo" value="Femenino"> <br
-    </p>
+        Sexo:  <label for="masculino">Masculino</label> <input type="radio" name="sexo" value="Masculino" id="masculino">
+               <label for="femenino">Femenino</label> <input type="radio" name="sexo" value="Femenino" id="femenino"> <br
+</p>
     <p>
-        Edad: <input type="number" name="edad" placeholder="edad">
-    </p>
+        <label for="edad">Edad:</label> <input type="number" name="edad" placeholder="edad" id="edad">
+</p>
     <p>
-        Email: <input type="email" name="email" placeholder="email@dominio.com">
-    </p>
+        <label for="email">Email:</label> <input type="email" name="email" placeholder="email@dominio.com" id="email">
+</p>
     <p>
-        Usuario: <input type="text" name="usuario" placeholder="usuario">
-    </p>
+        <label for="usuario">Usuario:</label> <input type="text" name="usuario" placeholder="usuario" id="usuario">
+</p>
     <p>
-        Password: <input type="password" name="password" placeholder="password">
-    </p>
+        <label for="password">Password:</label> <input type="password" name="password" placeholder="password" id="password">
+</p>
     <p>
-        Confirmar Password: <input type="password" name="confirmpass" placeholder="password">
-    </p>
+        <label for="password">Confirmar Password:</label> <input type="password" name="confirmpass" placeholder="password" id="password">
+</p>
     <p>
-        Tipo de servicio: Free <input type="checkbox" name="tipo de servicio" value="free"> /
-        Standard <input type="checkbox" name="tipo de servicio" value="standard"> /
-        Premium <input type="checkbox" name="tipo de servicio" value="premium">
-    </p>
+        Tipo de servicio: <label for="free">Free</label> <input type="checkbox" name="tipo de servicio" value="free" id="free"> /
+                          <label for="atandard">Standard</label> <input type="checkbox" name="tipo de servicio" value="standard" id="standard"> /
+                          <label for="premium">Premium</label> <input type="checkbox" name="tipo de servicio" value="premium" id="premium">
+</p>
     <p>
-        Tema:
-        <select>
-            <option>Política</option>
-            <option>Negocios</option>
-            <option>Tecnología</option>
-            <option>Salud</option>
-        </select>
-    <p>
-        Agregue un comentario: <textarea> </textarea>
+        <label for="tema">Tema:</label>
+            <select id="tema">
+                <option value="politica">Política</option>
+                <option value="negocios">Negocios</option>
+                <option value="tecnologia">Tecnología</option>
+                <option value="salud">Salud</option>
+            </select>
+<p>
+    <label for="comentario">Agregue un comentario:</label> <textarea id="comentario"> </textarea>
     </p>
     <p>
         <button>Boton de Enviar</button>
