--- a/Ejercicios-CSS/ej_columnas.html
+++ b/Ejercicios-CSS/ej_columnas.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Ejercicio Columnas</title>
+    <style>
+        #tituloPrincipal{
+            color:brown;
+        }
+        .tituloNoticia{
+            font-size: 35px;
+        }
+        body {
+            font-family: Franklin Gothic Medium
+        }
+    </style>
 </head>
 <body>
 <!--Cree los estilos CSS necesarios para que el texto se visualice en 2 columnas-->
