se realizo ejercicio de pseudoclases

--- a/Ejercicios-CSS/ej_columnas.html
+++ b/Ejercicios-CSS/ej_columnas.html
@@ -13,6 +13,15 @@
         body {
             font-family: Franklin Gothic Medium
         }
+        a:link, a:visited {
+            color: darkgoldenrod;
+        }
+            a:hover {
+                font-size: 3em;
+            }
+        a:active{
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
