--- a/Ejercicios-CSS/ej_cv.html
+++ b/Ejercicios-CSS/ej_cv.html
@@ -2,11 +2,18 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>CV Nombre Apellido</title>
+    <title>CV Sofia Erazo</title>
+    <link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="imagenes/icono_usuario.jpg">
+    <link rel="stylesheet" href="mi_estilo.css" type="text/css">
 </head>
 <body>
 
 <div>
+    <img id="principal" src="imagenes/icono_usuario.jpg">
     <h1>Nombre Alumno</h1>
     <h2>Ing. en Computacion</h2>
 </div>
