se corrigio error de ejercicio

--- a/Ejercicios-JavaScript/ConversorUnidades.html
+++ b/Ejercicios-JavaScript/ConversorUnidades.html
@@ -22,7 +22,7 @@
             <label for="pie"> Pie </label> = <input id="pie" type="text" name="unid_pie" onchange="cambiarunidades(this.id,this.value)">
         </p>
         <p>
-            <label for="yarda"> Yarda</label> = <input id="yarda" type="text" name="unid_yarda" onchange="cambiarunidades(this.id,th0is.value)">
+            <label for="yarda"> Yarda</label> = <input id="yarda" type="text" name="unid_yarda" onchange="cambiarunidades(this.id,this.value)">
         </p>
     </form>
 </div>
